--- a/day_06/templates/base.html
+++ b/day_06/templates/base.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block head %}{% endblock %}</title>
   </head>
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -18,13 +17,23 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{% url 'home' %}">MY MEGA SITE<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            {% if user.is_authenticated %}{% else %}<a class="nav-link disabled" >Hello <span id="user_name">{{ first_name }}</span></a>{% endif %}
+            {% if user.is_authenticated %}
+            <a class="nav-link disabled" >Hello, <span>{{ user.username }}</span></a>
+            {% else %}
+            <a class="nav-link disabled" >Hello, <span id="user_name">{{ first_name }}</span></a>
+            {% endif %}
           </li>
         </ul>
       </div>
+      {% if not user.is_authenticated %}
+        <a href="{% url 'signup' %}">Зарегистрироваться</a>/
+        <a href="{% url 'login' %}">Войти</a>
+      {% else %}
+        <a href="{% url 'logout' %}">Выйти</a>
+      {% endif %}
     </nav>
   {% block content %}
   {% endblock %}
