--- a/day_06/templates/home.html
+++ b/day_06/templates/home.html
@@ -3,5 +3,27 @@
 {% block title %} {% endblock %}
 
 {% block content %}
-
+<ul>
+{% for el in elements %}
+    <li>
+        {{el.content}} | {{el.author}} | {{el.date}} | {{el.positive}} | {{el.negative}}
+        {% if user.is_authenticated %}
+        <a href="{% url 'remove' el.pk %}">Удалить</a>
+        <a href="{% url 'upvote' el.pk %}">Like</a>
+        <a href="{% url 'downvote' el.pk %}">Dislike</a>
+        {% endif %}
+    </li>
+{% endfor %}
+</ul>
+{% if user.is_authenticated %}
+<form method="post">
+    {% csrf_token %}
+    <div class="d-flex flex-column chart-bg mx-2 mt-4 p-2 align-items-center">
+        {{ form }}
+    </div>
+    <div class="d-flex flex-column mt-2 align-items-center">
+        <input class="active p-2 w-50" type="submit" value="Добавить">
+    </div>
+</form>
+{% endif %}
 {% endblock %}
