--- a/day_06/templates/base.html
+++ b/day_06/templates/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>{% block head %}{% endblock %}</title>
+    <title>{% block head %}HOME{% endblock %}</title>
   </head>
 
   <body>
@@ -21,7 +21,7 @@
           </li>
           <li class="nav-item">
             {% if user.is_authenticated %}
-            <a class="nav-link disabled" >Hello, <span>{{ user.username }}</span></a>
+            <a class="nav-link disabled" >Hello, <span>{{ user.username }} ({{user.profileuser.reputation}})</span></a>
             {% else %}
             <a class="nav-link disabled" >Hello, <span id="user_name">{{ first_name }}</span></a>
             {% endif %}
