--- a/day_06/templates/signup.html
+++ b/day_06/templates/signup.html
@@ -3,17 +3,10 @@
 РЕГИСТРАЦИЯ
 {% endblock %}
 {% block content %}
-    <div class="text-center mt-5">
-        <span class="heading">Регистрация</span>
-    </div>
-
-    <div class="text-center">
-        <span class="sub-heading">Введите данные для регистрации</span>
-    </div>
-
-    <form class="text-center" method="post">
+    <form method="post" class="form-signin" style="max-width: 330px">
+        <h1 class="h3 mb-3 font-weight-normal">Введите данные для регистрации</h1>
         {% csrf_token %}
         {{ form.as_p }}
-        <input class="active p-2 w-50" type="submit" value="Сохранить">
+        <input class="btn btn-lg btn-primary btn-block" type="submit" value="Сохранить">
     </form>
 {% endblock %}
