--- a/day_06/templates/base.html
+++ b/day_06/templates/base.html
@@ -8,7 +8,7 @@
     <title>{% block head %}HOME{% endblock %}</title>
   </head>
 
-  <body>
+  <body class="text-center">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
