--- a/day_06/templates/registration/login.html
+++ b/day_06/templates/registration/login.html
@@ -3,30 +3,10 @@
 ВХОД
 {% endblock %}
 {% block content %}
-    <div class="text-center">
-        <span class="sub-heading">Введите логин и пароль</span>
-    </div>
-    <form method="post">
+    <form method="post" class="form-signin" style="max-width: 330px">
+        <h1 class="h3 mb-3 font-weight-normal">Введите логин и пароль</h1>
         {% csrf_token %}
-        <div class="d-flex flex-column chart-bg mx-2 mt-4 p-2 align-items-center">
-            {% for field in form %}
-                <div class="m-1">
-                    <span class="label-tag">{{field.label_tag}}</span>
-                    <div>
-                        {{field}}
-                    </div>
-                    {% if field.errors%}
-                        {% for error in field.errors %}
-                            <div class="alert alert-danger">
-                                {{error}}
-                            </div>
-                        {% endfor %}
-                    {% endif %}
-                </div>
-            {% endfor %}
-        </div>
-        <div class="d-flex flex-column mt-2 align-items-center">
-            <input class="active p-2 w-50" type="submit" value="Войти">
-        </div>
+        {{form.as_p}}
+      <input class="btn btn-lg btn-primary btn-block" type="submit" value="Войти">
     </form>
 {% endblock %}
