--- a/day_06/templates/signup.html
+++ b/day_06/templates/signup.html
@@ -3,10 +3,12 @@
 РЕГИСТРАЦИЯ
 {% endblock %}
 {% block content %}
-    <form method="post" class="form-signin" style="max-width: 330px">
+<div style="width: 40%; margin: 0 auto;">
+    <form method="post">
         <h1 class="h3 mb-3 font-weight-normal">Введите данные для регистрации</h1>
         {% csrf_token %}
         {{ form.as_p }}
         <input class="btn btn-lg btn-primary btn-block" type="submit" value="Сохранить">
     </form>
+</div>
 {% endblock %}
