--- a/day_07/templates/publication.html
+++ b/day_07/templates/publication.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <table class="table">
-  <thead class="thead-dark">
+  <thead>
     <tr>
       <th scope="col">{% trans 'Title' %}</th>
       <th scope="col">{% trans 'Synopsis' %}</th>
