--- a/day_07/templates/home.html
+++ b/day_07/templates/home.html
@@ -3,23 +3,25 @@
 
 {% block content %}
 <table class="table">
-  <thead class="thead-dark">
+  <thead>
     <tr>
       <th scope="col">{% trans 'Title' %}</th>
-      <th scope="col">{% trans 'Author' %}</th>
-      <th scope="col">{% trans 'Date created' %}</th>
       <th scope="col">{% trans 'Synopsis' %}</th>
-      <th scope="col">{% trans 'After publish' %}</th>
+      <th scope="col">{% trans 'Writer' %}</th>
+      <th scope="col">{% trans 'Date created' %}</th>
+      <th scope="col">{% trans 'When' %}</th>
+      <th scope="col">{% trans 'Detail' %}</th>
     </tr>
   </thead>
   <tbody>
     {% for art in articles %}
       <tr>
         <td>{{art.title|slice:20}}{% if art.title|length > 20 %}...{% endif %}</td>
+        <td>{{art.synopsis|slice:20}}{% if art.title|length > 20 %}...{% endif %}</td>
         <td>{{art.author|slice:20}}{% if art.title|length > 20 %}...{% endif %}</td>
         <td>{{art.created|slice:20}}{% if art.title|length > 20 %}...{% endif %}</td>
-        <td>{{art.synopsis|slice:20}}{% if art.title|length > 20 %}...{% endif %}</td>
         <td>{{art.get_time}} {% trans 'minutes' %}</td>
+        <td><a href="{% url 'detail' art.pk %}" class="btn btn-primary">{% trans 'Read' %}</a></td>
       </tr>
     {% endfor %}
   </tbody>
